Bug: Update mobile image clipping

--- a/style/portfolio.scss
+++ b/style/portfolio.scss
@@ -301,7 +301,7 @@ img.bg-brand-gradient,
 .layout-portfolio-body-row :not(.background-image-none) > * > video,
 .et_pb_title_featured_container img {
   background: linear-gradient(180deg, hsl(119, 30%, 85%) 0%, hsl(202, 30%, 80%) 100%); // TODO: Make colors variables
-  clip-path: rect(1px 100% 100% 0px round var(--border-radius-small)); // HACK: To cover up weird cropping by image that shows a pixel line at top of the background gradient
+  clip-path: inset(1px 0px 0px 0px round var(--border-radius-small)); // HACK: To cover up weird cropping by image that shows a pixel line at top of the background gradient
 }
 
 .layout-portfolio-hero-row img, 
@@ -327,6 +327,7 @@ img.bg-brand-gradient,
 
   .et_pb_image_wrap img, .et_pb_code_inner video {
     border-radius: 0; /* override */
+    clip-path: inset(1px 0px 0px 0px); // HACK: To cover up weird cropping by image that shows a pixel line at top of the background gradient
 }
 }
 
